# DX-Safety_HomeAssistant_Plugin_2025

./: .gitignore  Dockerfile  README.md  TEST_CHECKLIST.md  config.yaml  ha_config.json  main.py  pyproject.toml  pytest.ini  repository.json  repository.yaml  requirements.txt  run.sh  run_tests.py  test_config.json  test_shelter_nav_real.py
app/: main.py  settings.py
app/adapters/: __init__.py
app/common/: geo.py  retry.py
app/core/: __init__.py  geo_policy.py  models.py  normalize.py  policy.py  voice_template.py
app/dispatch/: ha_client.py  mqtt_publisher.py  tts.py
app/features/: shelter_nav.py
app/ingestion/: mqtt_ingestor.py
app/normalize/: cae_schema.json  normalizer.py
app/observability/: health.py  logger.py  logging_setup.py  metrics.py  server.py
app/orchestrators/: __init__.py  orchestrator.py  orchestrator_phase1.py  orchestrator_phase2.py  orchestrator_phase3.py  orchestrator_phase4.py  orchestrator_phase5.py
app/policy/: engine.py
app/ports/: __init__.py  dispatch.py  ingest.py  kvstore.py  metrics.py
app/utils/: env_checker.py  geo.py  retry.py
dx_safety/: Dockerfile  config.yaml  run.sh
dx_safety/app/: main.py
dx_safety/dxsafety-card/: README.md  (+2 more)
dxsafety-card/: package.json
grafana/: dashboard.json
migrations/: migrate_dedup_json_to_sqlite.py
share/: shelter2025.xlsx
tests/: README.md  conftest.py  test_comprehensive.py  test_idem_sqlite.py  test_normalize.py  test_phase1.py  test_phase1_integration.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_plan.md  test_policy.py  test_shelter_nav.py
(+41 files in other folders)
