[project]
name = "dx-safety-homeassistant-plugin-2025"
version = "0.1.3"
description = "CAP 기반 재난 경보 수신/정규화/정책결정/디스패치 서비스"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt==1.6.1",
    "jsonschema==4.23.0",
    "shapely==2.0.4",
    "aiohttp==3.10.5",
    "pydantic==2.8.2",
    "structlog>=23.0.0",
    "prometheus-client>=0.17.0",
    "asyncio-mqtt>=0.16.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]
